# pailliercryptolib_python

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  CODEOWNERS  README.md  dev_test.py  requirements.txt  setup.py
.github/workflows/: github-ci.yml
bench/: bench_ipcl_mb8_python.py  bench_ipcl_python.py
example/: ipclpy_example.py
lib/: fate_fixedpoint.cmake  ipcl.cmake  nanobind.cmake  pybind11.cmake
p2ca_prep/: bench_fate_paillier.py  bench_ipcl_python.py
src/ipcl_python/: __init__.py  baseconverter.cpp  ipcl_bindings.cpp  ipcl_bindings_classes.cpp  ipcl_mb8_python.py  ipcl_python.py
src/ipcl_python/bindings/: __init__.py  baseconverter.cpp  fixedpoint.py  ipcl_bindings.cpp  ipcl_bindings_classes.cpp
src/ipcl_python/bindings/include/: baseconverter.h  baseconverter.hpp  ipcl_bindings.h  ipcl_bindings.hpp
src/ipcl_python/include/: baseconverter.h  ipcl_bindings.h
tests/: ipcl_mb8_python_test.py  ipcl_python_test.py
